split model training into distinct new - save -load
